# edhstat

./: .gitignore  CMakeLists.txt  LICENSE  PlayerConfiguration.ui  README.md  concept.ui
src/: CMakeLists.txt
src/app/: CMakeLists.txt  FormMain.cpp  FormMain.h  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: CMakeLists.txt  Dirty.h  Export.h  Game.cpp  Game.h  Object.cpp  Object.h  Pimpl.h  PimplImpl.h  Player.cpp  Player.h  PlayerTurn.cpp  PlayerTurn.h  Round.cpp  Round.h  Rules.cpp  Rules.h  Turn.cpp  Turn.h  TurnAction.cpp  TurnAction.h  TurnManager.h  signal.h
src/logger/: CMakeLists.txt  Export.h  Logger.cpp  Logger.h  OutputSink.cpp  OutputSink.h  stacktrace_windows.cpp
src/qt/: CMakeLists.txt  ComboBoxPlayer.cpp  ComboBoxPlayer.h  ComboBoxTurnActionType.cpp  ComboBoxTurnActionType.h  DelegatePlayer.cpp  DelegatePlayer.h  DelegateTurnActionType.cpp  DelegateTurnActionType.h  DialogPlayerConfiguration.cpp  DialogPlayerConfiguration.h  Export.h  GroupBoxGroup.cpp  GroupBoxGroup.h  GroupBoxPlayer.cpp  GroupBoxPlayer.h  PlayerTableModel.cpp  PlayerTableModel.h  PlayerWidget.cpp  PlayerWidget.h  TableWidgetPlayer.cpp  TableWidgetPlayer.h  TreeWidgetRounds.cpp  TreeWidgetRounds.h  Widget.cpp  Widget.h  WidgetPlayerTable.cpp  WidgetPlayerTable.h  WidgetPlayers.cpp  WidgetPlayers.h
